--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Dhrubajyoti Chakraborty
 description: Researcher in Economics, Bounded Rationality, and Social Network Analysis
 baseurl: ""
-url: "https://yourusername.github.io"
+url: "https://dhruba-c.github.io"
 theme: minima
 
 # Social Links
-github_username: yourusername
-email: your-email@example.com
+github_username: dhruba-c
+email: dhrubajyoti.chakraborty_phd23@ashoka.edu.in
