--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ url: "https://dhruba-c.github.io"
 theme: minima
 
 # Social Links
-github_username: dhruba-c
+github_username: dhruba-c.github.io
 email: dhrubajyoti.chakraborty_phd23@ashoka.edu.in
