--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Dhrubajyoti Chakraborty
 description: Researcher in Economics, Bounded Rationality, and Social Network Analysis
-baseurl: "https://dhruba-c.github.io"
+baseurl: ""
 url: "https://dhruba-c.github.io"
 theme: minima
 
